--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Restful backend API for a mini EMR",
   "main": "index.ts",
   "scripts": {
-    "dev":"nodemon --exec ts-node src/index.ts",
-    "build":"tsc",
-    "start":"dist/index.js",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc",
+    "start": "dist/index.js",
     "test": "test"
   },
   "repository": {
@@ -29,5 +29,19 @@
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/uuid": "^10.0.0",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.15.3",
+    "uuid": "^13.0.0"
   }
 }
